--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch src/server.js"
+    "start": "node --watch --env-file .env src/server.js"
   },
   "keywords": [],
   "author": "",
